--- a/localisation/english/swnd_ships_l_english.yml
+++ b/localisation/english/swnd_ships_l_english.yml
@@ -8953,6 +8953,18 @@ l_english:
  EXTRA_LARGE_ION_CANNON_X2_5_DESC: "§VTech Tier§!: 5\nA twin-barreled CoMar Combat Systems f-9 heavy ion cannon, mounted aboard an armored turret."
  EXTRA_LARGE_ION_CANNON_X2_6: "Dual Ion Cannon VI"
  EXTRA_LARGE_ION_CANNON_X2_6_DESC: "§VTech Tier§!: 6\nA twin-barreled NK-7 ion cannon manufactured by Borstel Galactic Defense, mounted aboard an armored turret."
+ EXTRA_LARGE_ION_CANNON_X2_BELLATOR_1: "Dual Ion Cannon I"
+ EXTRA_LARGE_ION_CANNON_X2_BELLATOR_1_DESC: "§VTech Tier§!: 0\nA twin-barreled C-136 ion cannon from Speizoc Arms, mounted aboard an armored turret."
+ EXTRA_LARGE_ION_CANNON_X2_BELLATOR_2: "Dual Ion Cannon II"
+ EXTRA_LARGE_ION_CANNON_X2_BELLATOR_2_DESC: "§VTech Tier§!: 2\nA twin-barreled A-4 ion cannon manufactured by Kuat Drive Yards, mounted aboard an armored turret."
+ EXTRA_LARGE_ION_CANNON_X2_BELLATOR_3: "Dual Ion Cannon III"
+ EXTRA_LARGE_ION_CANNON_X2_BELLATOR_3_DESC: "§VTech Tier§!: 3\nA twin-barreled CoMar Combat Systems f-2 light ion cannon, mounted aboard an armored turret."
+ EXTRA_LARGE_ION_CANNON_X2_BELLATOR_4: "Dual Ion Cannon IV"
+ EXTRA_LARGE_ION_CANNON_X2_BELLATOR_4_DESC: "§VTech Tier§!: 4\nA twin-barreled CoMar Combat Systems f-4 medium ion cannon, mounted aboard an armored turret."
+ EXTRA_LARGE_ION_CANNON_X2_BELLATOR_5: "Dual Ion Cannon V"
+ EXTRA_LARGE_ION_CANNON_X2_BELLATOR_5_DESC: "§VTech Tier§!: 5\nA twin-barreled CoMar Combat Systems f-9 heavy ion cannon, mounted aboard an armored turret."
+ EXTRA_LARGE_ION_CANNON_X2_BELLATOR_6: "Dual Ion Cannon VI"
+ EXTRA_LARGE_ION_CANNON_X2_BELLATOR_6_DESC: "§VTech Tier§!: 6\nA twin-barreled NK-7 ion cannon manufactured by Borstel Galactic Defense, mounted aboard an armored turret."
  POINT_DEFENCE_MASS_SW_DRIVER_1: "Light Mass Driver I"
  POINT_DEFENCE_MASS_SW_DRIVER_1_DESC: "§VTech Tier§!: 0\nA single-barreled MSt-10 light mass driver cannon manufactured by Golan Arms, effective against enemy starfighters and incoming missiles."
  POINT_DEFENCE_MASS_SW_DRIVER_2: "Light Mass Driver II"
