--- a/localisation/swnd_wip_elratie_l_english.yml
+++ b/localisation/swnd_wip_elratie_l_english.yml
@@ -748,7 +748,7 @@
  MESSAGE_TYPE_SARLACC_KILLS_POP_TITLE: "Pop Died"
  MESSAGE_TYPE_SARLACC_KILLS_POP_MESSAGE: "Jabba Desilijic Tiure has thrown one of our people into the great pit of carkoon on the planet §YTatooine§! for a slow and torturous death."
  MESSAGE_TYPE_MANDO_FORGE_TITLE: "Mandalorian Forge"
- MESSAGE_TYPE_MANDO_FORGE_MESSAGE: "On $PLANET|Y$ a new $DEPOSIT|Y$ was build."
+ MESSAGE_TYPE_MANDO_FORGE_MESSAGE: "A new $DEPOSIT|Y$ is built on $PLANET|Y$."
  MESSAGE_SUBJECT_LEVEL_UP_specialist_mando_clan_TITLE: "$MESSAGE_SUBJECT_LEVEL_UP_TITLE$"
 
  #Buildings
