--- a/localisation/english/swnd_names_l_english.yml
+++ b/localisation/english/swnd_names_l_english.yml
@@ -4179,6 +4179,7 @@ Ulrikae: "Ulrikae"
  PRESCRIPTED_species_bio_BlackSunOrganization: " "
  PRESCRIPTED_species_adjective_BlackSunOrganization: "Falleen"
  PRESCRIPTED_adjective_BlackSunOrganization: "Black Sun"
+ PRESCRIPTED_ruler_name_BlackSunOrganization: "Ziton Moj"
  PRESCRIPTED_ruler_first_name_BlackSunOrganization: "Ziton"
  PRESCRIPTED_ruler_second_name_BlackSunOrganization: "Moj"
  NAME_bothan_council: "Bothan Council"
@@ -4189,6 +4190,7 @@ Ulrikae: "Ulrikae"
  PRESCRIPTED_species_bio_BothanCouncil: " "
  PRESCRIPTED_species_adjective_BothanCouncil: "Bothan"
  PRESCRIPTED_adjective_BothanCouncil: "Council"
+ PRESCRIPTED_ruler_name_BothanCouncil: "Borsk Fey'lya"
  PRESCRIPTED_ruler_first_name_BothanCouncil: "Borsk"
  PRESCRIPTED_ruler_second_name_BothanCouncil: "Fey'lya"
  NAME_cathar_principality: "Cathar Principality"
@@ -4236,6 +4238,7 @@ Ulrikae: "Ulrikae"
  PRESCRIPTED_species_plural_CiutricHegemony: "Humans"
  PRESCRIPTED_species_bio_CiutricHegemony: " "
  PRESCRIPTED_species_adjective_CiutricHegemony: "Human"
+ PRESCRIPTED_ruler_name_CiutricHegemony: "Pensar Luc"
  PRESCRIPTED_adjective_CiutricHegemony: "Ciutric"
  PRESCRIPTED_ruler_first_name_CiutricHegemony: "Pensar"
  PRESCRIPTED_ruler_second_name_CiutricHegemony: "Luc"
@@ -4257,6 +4260,7 @@ Ulrikae: "Ulrikae"
  PRESCRIPTED_species_bio_ConfederateRemnant: " "
  PRESCRIPTED_species_adjective_ConfederateRemnant: "Neimoidian"
  PRESCRIPTED_adjective_ConfederateRemnant: "Separatists"
+ PRESCRIPTED_ruler_name_ConfederateRemnant: "Marath Vooro"
  PRESCRIPTED_ruler_first_name_ConfederateRemnant: "Marath"
  PRESCRIPTED_ruler_second_name_ConfederateRemnant: "Vooro"
  NAME_corellian_security: "Corellian Security"
@@ -4418,6 +4422,7 @@ Ulrikae: "Ulrikae"
  PRESCRIPTED_species_name_MonCalaMonarchy: "Mon Calamari"
  PRESCRIPTED_species_plural_MonCalaMonarchy: "Mon Calamari"
  PRESCRIPTED_species_bio_MonCalaMonarchy: " "
+ PRESCRIPTED_ruler_name_MonCalaMonarchy: "Lee Char"
  PRESCRIPTED_species_adjective_MonCalaMonarchy: "Mon Calamari"
  PRESCRIPTED_adjective_MonCalaMonarchy: "Mon Calamari"
  PRESCRIPTED_ruler_first_name_MonCalaMonarchy: "Lee"
@@ -4430,6 +4435,7 @@ Ulrikae: "Ulrikae"
  PRESCRIPTED_species_bio_PantoranAssembly: " "
  PRESCRIPTED_species_adjective_PantoranAssembly: "Pantoran"
  PRESCRIPTED_adjective_PantoranAssembly: "Pantora"
+ PRESCRIPTED_ruler_name_PantoranAssembly: "Notluwiski Papanoida"
  PRESCRIPTED_ruler_first_name_PantoranAssembly: "Notluwiski"
  PRESCRIPTED_ruler_second_name_PantoranAssembly: "Papanoida"
  NAME_rodian_clans: "Rodian Clans"
@@ -4715,6 +4721,7 @@ Ulrikae: "Ulrikae"
  NAME_Droid: "Droid"
  NAME_Droid_Armada: "Droid Armada"
  NAME_Droids: "Droids"
+ NAME_Tactical_Droid: "Tactical Droid"
  NAME_Equipped_Nebulon_B: "Equipped Nebulon B"
  NAME_Event_Arquintens_Tier2: "Arquintens"
  NAME_Event_Bulk_Cruiser_Tier2: "Heavy Bulk Cruiser"
