--- a/localisation/swnd_wip_bosmeri_l_english.yml
+++ b/localisation/swnd_wip_bosmeri_l_english.yml
@@ -318,3 +318,7 @@
  ### 14 Feb 2024 ###
  d_aki_ktura: "Aki-Ktura"
  d_aki_ktura_desc: "Aki-Ktura is a populous Aki-Aki farming village."
+
+ ## 17 May 2024 ##
+ ring_world_2_intermediate_MEGASTRUCTURE_DETAILS: ""
+ ring_world_3_intermediate_MEGASTRUCTURE_DETAILS: ""
